# PEERNet

./: .gitignore  README.md  pyproject.toml
docs/metrics/: metric_logger.md  timer.md
peernet/: __init__.py  cli.py  cli_client.py  cli_server.py
peernet/inference/: DummyInference.py  JetsonInference.py  Protocols.py  TorchvisionPretrained.py  __init__.py  enginize.py
peernet/metrics/: Container.py  MetricLogger.py  SingleValue.py  Timer.py  TokensPerSecond.py  __init__.py
peernet/networks/: BaseNetwork.py  Messages.py  ROS_Network.py  ZMQ_Pair.py  ZMQ_UDP.py  __init__.py
peernet/sensors/: Protocols.py  __init__.py  get_sensor.py  random_string.py
peernet/sensors/datasets/: FixedImage.py  __init__.py
peernet/utils/: __init__.py  custom_formatter.py  plotting.py
tests/inference/: __init__.py  test_builtin_engines.py  test_mobilenet_detection.py
tests/metrics/: .gitignore  __init__.py  test_context_manager.py  test_ir.py  test_mixed_children.py  test_performance.py  test_timer.py  test_tps.py
tests/networks/: __init__.py  test_base_network.py  test_config.yaml  test_ros_network.py  test_zmq_pair_client.py  test_zmq_pair_server.py
tests/networks/udp/: test_zmq_udp.py
tests/sensors/: dummy_sensor.py  test_get_sensor.py  test_random_string.py
tests/sensors/datasets/: __init__.py  test_fixed_image.py
tests/utils/: __init__.py  test_custom_formatter.py  test_density_plots.py
tests/utils/resources/: data.csv
